--- a/src/components/Carrossel.css
+++ b/src/components/Carrossel.css
@@ -15,7 +15,7 @@
     display: block;
 }
 
-/* Gradiente sobre a imagem */
+/* Gradiente */
 .carousel-item {
     position: relative;
     overflow: hidden;
